worked on it a bit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 		
 	</div>
-	<div>
+	<div class="summary">
 		<div>
 			<i></i><!--icon goes here-->
 			<h1>Fully Responsive</h1>
@@ -34,56 +34,66 @@
 			<p>Ready to use with your own content, or customize the source files!</p>
 		</div>
 	</div>
-	<div>
-		<div>
+	<div class="showcase">
+		<div class="showcase-block">
 			<h1>Fully Responsive Design</h1>
 			<p>When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
 		</div>
-		<div>
+		<div class="showcase-block showcase-img">
 			<!--background img here-->
+			
 		</div>
 
-		<div>
+		<div class="showcase-block showcase-img">
+			<!--background img here-->
+			
+		</div>
+		<div class="showcase-block">
 			<h1>Updated For Bootstrap 4</h1>
 			<p>Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
 		</div>
-		<div>
-			<!--background img here-->
-		</div>
-
-		<div>
+		
+		<div class="showcase-block">
 			<h1>Easy to Use & Customize</h1>
 			<p>Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
 		</div>
-		<div>
+		<div class="showcase-block showcase-img">
 			<!--background img here-->
+
 		</div>
+		
+		
 	</div>
-	<div>
-		<h1>What people are saying...</h1>
-		<div>
+
+	<h1>What people are saying...</h1>
+	<div class="testimonials">
+		
+		<div class="client">
 			<img src="#">
 			<h1>Theresa Q.</h1>
 			<p>&quot;Thanks guys! You've made building an awesome site easy.&quot;</p>
 		</div>
-		<div>
+		<div class="client">
 			<img src="#">
 			<h1>Stafford B.</h1>
-			<p><&quot;>I'm still amazed at the possibilities this framework offers.<&quot;></p>
+			<p>&quot;I'm still amazed at the possibilities this framework offers.&quot;</p>
 		</div>
-		<div>
+		<div class="client">
 			<img src="#">
 			<h1> Eliza J.</h1>
-			<p><&quot;>To me, Bootstrap means less time for worrying and more time for creativity.<&quot;></p>
+			<p>&quot;To me, Bootstrap means less time for worrying and more time for creativity.&quot;</p>
 		</div>
-		<div class="banner banner-sm">
-			<h1>Build a landing page for your business or project and generate more leads!</h1>
-			<div class="input-bar">
-				<input type="email" name="user-email" placeholder="Enter your email...">
-				<button>Sign up!</button>
-			</div>
+		
+	</div>
+
+	<div class="banner banner-sm">
+		<h1>Build a landing page for your business or project and generate more leads!</h1>
+		<div class="input-bar">
+			<input type="email" name="user-email" placeholder="Enter your email...">
+			<button>Sign up!</button>
 		</div>
 	</div>
+
 	<footer>
 		<div>
 			<nav>
