Top bar and banner looking good as well as color theme.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 <body>
 	<header>
 		<p>Start Bootstrap</p>
-		<button>Sign in </button>
+		<button>Sign in</button>
 	</header>
 	<div class="banner banner-lg">
 		<h1>Build a landing page for your business or project and generate more leads!</h1>
 		<div class="input-bar">
 			<input type="email" name="user-email" placeholder="Enter your email...">
-			<button>Sign up!</button>
+			<button class="btn-lg">Sign in</button>
 		</div>
 		
 	</div>
-	<div class="summary">
+	<div class="thirds">
 		<div>
 			<i></i><!--icon goes here-->
 			<h1>Fully Responsive</h1>
@@ -66,7 +66,7 @@
 	</div>
 
 	<h1>What people are saying...</h1>
-	<div class="testimonials">
+	<div class="thirds">
 		
 		<div class="client">
 			<img src="#">
@@ -90,7 +90,7 @@
 		<h1>Build a landing page for your business or project and generate more leads!</h1>
 		<div class="input-bar">
 			<input type="email" name="user-email" placeholder="Enter your email...">
-			<button>Sign up!</button>
+			<button class="btn-lg">Sign in</button>
 		</div>
 	</div>
 
